# KIV-PPR-Distribution

./: CMakeLists.txt
compiled/: checker.ini
compiled/semestralky/: score.csv
data/: gauss  poisson
include/CL/: cl2.hpp
msvc/: pprsolver.vcxproj  pprsolver.vcxproj.filters
referencni_rozdeleni/: exp  generator.cpp  uniform
src/: AdvancedFileStats.cpp  AdvancedFileStats.h  BasicFileStats.cpp  BasicFileStats.h  CMakeLists.txt  Config.h  FileReader.cpp  FileReader.h  FileStats.cpp  Histogram.cpp  Histogram.h  HistogramBuilder.cpp  HistogramBuilder.h  MedianFinder.cpp  MedianFinder.h  NormalDistributionTest.cpp  NormalDistributionTest.h  Utils.cpp  Utils.h  WatchDog.cpp  WatchDog.h  config.h  main.cpp  opencl.h
src/cdfs/: Cdf.h  ExponentialCDF.cpp  ExponentialCDF.h  NormalCDF.cpp  NormalCDF.h  Poisson.cpp  Poisson.h  PoissonCDF.cpp  PoissonCDF.h  UniformCDF.cpp  UniformCDF.h  cdf.h  exponential_cdf.cpp  exponential_cdf.h  normal_cdf.cpp  normal_cdf.h  poisson_cdf.cpp  poisson_cdf.h  uniform_cdf.cpp  uniform_cdf.h
src/chi_square/: ChiSquare.cpp  ChiSquare.h  TestRunner.cpp  chi_square.cpp  chi_square.h  test_runner.cpp  test_runner.h
src/file_processing/: FileStats1.cpp  FileStats1.h
src/processing/: FileStats.cpp  FileStats.h  FileStats1.cpp  FileStats1.h  FileStats2.cpp  FileStats2.h  FirstIteration.cpp  FirstIteration.h  SecondIteration.cpp  SecondIteration.h  file_stats.cpp  file_stats.h  gpu_kernels.cpp  (+7 more)
tmp/: AdvancedFileStats.cpp  AdvancedFileStats.h  Config.h  FileReader.cpp  FileReader.h  FileStats.h  Histogram.cpp  Histogram.h  WatchDog.h  main.cpp
(+57 files in other folders)
